--- a/UAS.css
+++ b/UAS.css
@@ -32,7 +32,7 @@ section{
 }
 
 .heading span{
-    color:#a5953b
+    color:rgb(152, 135, 23)
 }
 
 .btn{
@@ -166,4 +166,141 @@ header .icons a:hover{
     padding:.5rem 0;
     padding-top: 1rem;
     line-height: 1.5;
+}
+
+
+
+.icons-container{
+    background:rgb(0, 0, 0);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.icons-container .icons{
+    background:rgba(175, 172, 12, 0.444);
+    border:.1rem solid rgba(237, 222, 222, 0.1);
+    padding:2rem;
+    display: flex;
+    align-items: center;
+    flex:1 1 25rem;
+    box-shadow: 0 .5rem 2rem rgba(255, 249, 249, 0.204);
+    border-radius: 1rem;
+    border:.1rem solid rgba(255, 255, 255, 0.1);
+}
+
+.icons-container .icons img{
+    height:5rem;
+    margin-right: 2rem;
+}
+
+.icons-container .icons h3{
+    color:rgb(255, 250, 250);
+    padding-bottom: .5rem;
+    font-size: 1.5rem;
+}
+
+.icons-container .icons span{
+    color:rgb(255, 253, 253);
+    font-size: 1.3rem;
+}
+
+.products{
+    background:#000000 no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.products .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+}
+
+.products .box-container .box{
+    flex:1 1 30rem;
+    box-shadow: 0 .5rem 2rem rgba(255, 249, 249, 0.204);
+    border-radius: 1rem;
+    border:.1rem solid rgba(255, 255, 255, 0.1);
+    position: relative;    
+}
+.products .box-container .box .discount{
+    position: absolute;
+    top:1rem; left:1rem;
+    padding:.7rem 1rem;
+    font-size: 2rem;
+    color:rgb(255, 249, 249);
+    background:rgba(149, 144, 11, 0.315);
+    z-index: 1;
+    border-radius: .5rem;
+}
+
+.products .box-container .box .image{
+    position: relative;
+    text-align: center;
+    padding-top: 2rem;
+    overflow:hidden;
+}
+
+.products .box-container .box .image img{
+    height:25rem;
+}
+
+.products .box-container .box:hover .image img{
+    transform: scale(1.1);
+}
+
+.products .box-container .box .image .icons{
+    position: absolute;
+    bottom:-7rem; left:0; right:0;
+    display: flex;
+}
+
+.products .box-container .box:hover .image .icons{
+    bottom:0;
+}
+
+.products .box-container .box .image .icons a{
+    height: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    width:50%;
+    background:var(--pink);
+    color:#fff;
+}
+
+.products .box-container .box .image .icons .cart-btn{
+    border-left: .1rem solid #fff7;
+    border-right: .1rem solid #fff7;
+    width:100%;
+}
+
+.products .box-container .box .image .icons a:hover{
+    background:rgb(145, 137, 24);
+}
+
+.products .box-container .box .content{
+    padding:2rem;
+    text-align: center;
+}
+
+.products .box-container .box .content h3{
+    font-size: 2.5rem;
+    color:rgb(255, 255, 255);
+}
+
+.products .box-container .box .content .price{
+    font-size: 2.5rem;
+    color:rgb(255, 255, 255);
+    font-weight: bolder;
+    padding-top: 1rem;
+}
+
+.products .box-container .box .content .price span{
+    font-size: 1.5rem;
+    color:rgb(210, 7, 7);
+    font-weight: lighter;
+    text-decoration: line-through;
 }
