--- a/UAS.css
+++ b/UAS.css
@@ -418,3 +418,56 @@ header .icons a:hover{
     resize: none;
     
 }
+
+.footer{
+    background:#000000 no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.footer .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+}
+
+.footer .box-container .box{
+    flex:1 1 25rem;
+}
+
+.footer .box-container .box h3{
+    color:rgb(242, 237, 237);
+    font-size: 2.5rem;
+    padding:1rem 0;
+}
+
+.footer .box-container .box a{
+    display: block;
+    color:rgb(255, 255, 255);
+    font-size: 1.5rem;
+    padding:1rem 0;
+}
+
+.footer .box-container .box a:hover{
+    color:var(#c3a919);
+    text-decoration: underline;
+}
+
+.footer .box-container .box  img{
+    margin-top: 1rem;
+}
+
+.footer .credit{
+    text-align: center;
+    padding:1.5rem;
+    margin-top: 1.5rem;
+    padding-top: 2.5rem;
+    font-size: 2rem;
+    color:rgb(251, 248, 248);
+    border-top: .5rem solid rgba(255, 255, 255, 0.1);
+    padding-bottom: 9rem;
+}
+
+
+
+
+
